# real_time_face_detection

./: .gitignore  1. face dataset.py  3. face recognition.py  LICENSE  config.json  config_loader.py  face_training.py  profiles.json  profiles.py  pytest.ini  real_time_recognition.py  setup.cfg  utils.py
.github/workflows/: python-app.yml
src/real_time_face_detection/: config_loader.py  create_user.py  face_training.py  main.py  profiles.py  real_time_recognition.py  utils.py
src/real_time_face_detection/ressources/: config.json  profiles.json
tests/: test_config.json  test_config_loader.py  test_profiles.json  test_profiles.py
