[metadata]
name = michaelstuffer98.real_time_face_detection
author = Michael Stuffer
author_email = michi_stuffer@outlook.de
url = https://github.com/michaelstuffer98/real_time_face_detection
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End User
    License :: MIT
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find_namespace:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    opencv-python>=4.7
    numpy>=1.24
    Pillow>=9.4

[options.entry_points]
console_scripts =
    face_detection = real_time_face_detection.main:main

[options.packages.find]
where = src

[flake8]
max-line-length = 120
ignore = E266
exclude = build,.git,__pycache__,.vscode,.pytest_cache,*.egg-info
